<resources>
    <string name="app_name">Game Catalog</string>
    <string name="title_activity_main">Game Catalog</string>
    <string name="image_description">Gambar Game</string>
    <string name="menu_favorite">Jadikan Disukai</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="original_name">Original Name</string>
    <string name="title_favorite">Favorite</string>
    <string name="favorite_game">Favorite Game</string>
    <string name="error">Error</string>
</resources>